[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/heart_1.tscn" type="PackedScene" id=1]
[ext_resource path="res://Graphics/HUD/hud_coins.png" type="Texture" id=2]
[ext_resource path="res://Scripts/GUI.gd" type="Script" id=3]

[node name="GUI" type="CanvasLayer" groups=[
"GUI",
]]
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartsContainer" type="HBoxContainer" parent="Control"]
margin_left = 40.0
margin_top = 40.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="heart_1" parent="Control/HeartsContainer" instance=ExtResource( 1 )]

[node name="HeartsContainer2" type="HBoxContainer" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -200.0
margin_top = 40.0
margin_bottom = 45.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="heart_1" type="TextureRect" parent="Control/HeartsContainer2"]
margin_right = 47.0
margin_bottom = 47.0
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="Control/HeartsContainer2"]
margin_left = 51.0
margin_top = 16.0
margin_right = 59.0
margin_bottom = 30.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 0
text = "0"
